[package]

name = "golde"
version = "0.1.0"
repository = "https://github.com/mrxiaozhuox/golde"
author = ["YuKun Liu <mrxzx.info@gmail.com>"]
description = "Execute Javascript code in the Dioxus, and get the return value."

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "golde-wasm-demo"
path = "src/bin/wasm.rs"

# default runtime for desktop
[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
dioxus = { version="0.2", features = ["desktop", "ssr"] }
fermi = "0.2"
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
doson = "0.1.5"
log = "0.4.6"

# runtime dioxus for wasm
[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
dioxus = { version="0.2", features = ["web"] }
fermi = "0.2"
wasm-bindgen = "0.2.74"
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
doson = "0.1.5"
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
